No longer able to horizontally scroll on mobile!

--- a/css/general.css
+++ b/css/general.css
@@ -54,6 +54,7 @@ body {
         "main"
         "footer"
     ;
+    grid-template-columns: minmax(0, 1fr);
 }
 
 header {
